<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_gravity="end"
    android:background="#fff">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:orientation="vertical"
        android:clickable="true">

        <EditText
            android:id="@+id/etModelSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:padding="4sp"
            android:background="@color/edit_text_background"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:textColor="#666"
            android:textSize="18sp"
            android:hint="@string/search"
            android:textColorHint="@color/hint_text_color"
            android:drawableEnd="@drawable/ic_search"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:text="@string/filters"
            android:textColor="#666"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12sp"
            android:layout_marginBottom="4sp"
            android:background="#ccc" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="12sp"
            android:paddingEnd="0sp">

            <RadioButton
                android:id="@+id/rbAllModels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#666"
                android:text="@string/view_all_models"/>

            <RadioButton
                android:id="@+id/rbMyModels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#666"
                android:text="@string/view_my_models"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12sp"
            android:layout_marginBottom="4sp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingStart="12sp"
            android:paddingEnd="0sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/chkFemale"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="@color/female_color"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_female_shadow"
                    android:contentDescription="@string/female"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/chkMale"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="@color/male_color"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_male_shadow"
                    android:contentDescription="@string/male"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/chkCouple"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/couple"
                    android:textColor="@color/couple_color"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_couple_shadow"
                    android:contentDescription="@string/couple"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/chkGroup"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/group"
                    android:textColor="@color/group_color"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_group_shadow"
                    android:contentDescription="@string/group"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12sp"
            android:layout_marginBottom="4sp"
            android:background="#ccc" />

        <TextView
            android:id="@+id/tvFilterCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:paddingStart="12sp"
            android:paddingEnd="0sp"
            android:textColor="#666"
            android:textSize="16sp"
            android:text="@string/results_count"/>

        <TextView
            android:id="@+id/tvAppVersion"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:layout_marginTop="18sp"
            android:gravity="bottom|end"
            android:textColor="#ccc"/>

    </LinearLayout>

</ScrollView>